Add CE Check-In panel page with embedded website

--- a/src/views/partials/top.ejs
+++ b/src/views/partials/top.ejs
@@ -24,6 +24,7 @@
           <a class="button glass-button button-secondary" href="/">Home</a>
           <a class="button glass-button button-secondary" href="/appointments/new">Add Appointment</a>
           <a class="button glass-button button-secondary" href="/agent">AI Quick Add</a>
+          <a class="button glass-button button-secondary" href="/checkin">Check-In</a>
           <a class="button glass-button button-secondary" href="/settings">Settings</a>
           <% if (isTestProfileActive && activeTestProfile) { %>
             <span class="test-profile-badge">
